# Karaoke-bot

./: README.md
karaoke_bot/: pyproject.toml
karaoke_bot/karaoke_bot/: bot.py  config.py  create_bot.py
karaoke_bot/karaoke_bot/bot_old_version/: bot_old_version.py  id_url_all.csv  karaoke_old_version.db  links_by_user_id.json  rec_id_url_04_26_2023.csv  recommendations.py  sqlalchemy_orm.py  unique_links_parse.py
karaoke_bot/karaoke_bot/handlers/: utils.py
karaoke_bot/karaoke_bot/karaoke_gram/: __init__.py  karaoke.py  karaoke_user.py  utils.py
karaoke_bot/karaoke_bot/keyboards/: __init__.py  client_keyboards.py  keyboard_factory.py
karaoke_bot/karaoke_bot/localization/: localization_manager.py
karaoke_bot/karaoke_bot/models/: sqlalchemy_data_utils.py  sqlalchemy_exceptions.py  sqlalchemy_models.py  sqlalchemy_models_without_polymorph.py
karaoke_bot/karaoke_bot/repository/: abstract_repository.py  memory_repository.py  mysql_repository.py  sqlalchemy_repository.py  sqlite_repository.py
karaoke_bot/karaoke_bot/states/: __init__.py  owner_states.py  visitor_states.py
karaoke_bot/karaoke_bot/utils/: download_youtube_track.py  download_youtube_track_2.py  id_url.csv  test.py  tracks_data.json
karaoke_bot/spectrogram/: any_dataset.py  audio_processing.py  main.py  spectrogram2.py  spectrogram_multithreading.py  spectrogram_multithreading_v2.py
karaoke_bot/tests/test_handlers/: test_utils.py
karaoke_bot/tests/test_repository/: test_abstract_repository.py  test_memory_repository.py  test_sqlite_repository.py
(+21 files in other folders)
