[tool.poetry]
name = "karaoke-bot"
version = "0.1.0"
description = ""
authors = ["gra4evp <petrgrachev1@gmail.com>"]
readme = "README.md"
packages = [{include = "karaoke_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.25.1"
yt-dlp = "^2023.3.4"
pymysql = "^1.0.3"
sqlalchemy = "^2.0.10"
librosa = "^0.10.1"
matplotlib = "^3.8.0"
qrcode = "^7.4.2"
opencv-python = "^4.8.1.78"
tqdm = "^4.66.1"
scikit-image = "^0.22.0"
pandas = "^2.1.3"
torch = "^2.1.1"
torchvision = "^0.16.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pytest = "^7.3.1"
mypy = "^1.2.0"
pylint = "^2.17.2"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
